# bare-web-kit

./: CMakeLists.txt  README.md  binding.m  package.json
.github/workflows/: prebuild.yml  test.yml
lib/: bridging.h  web-view.h  web-view.js
